Fix code indentation and refactor code